chronograf-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: chronograf
  namespace: mit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronograf
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: chronograf
    spec:
      containers:
      - image: chronograf:1.5.0.1-alpine
        imagePullPolicy: Always
        name: chronograf
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
        command:
        - chronograf
        - --influxdb-url=http://influxdb-data:8086
