data-statefulset.yml
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: influxdb-data
  namespace: mit
spec:
  serviceName: influxdb-data
  replicas: 10
  template:
    metadata:
      labels:
        app: influxdb
        role: data
        storage: gp2
        cluster: mit
    spec:
      tolerations: 
      - key: "purpose"
        operator: "Equal"
        value: "influxdb"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kops.k8s.io/instancegroup
                operator: In
                values:
                - influxdb-enterprise
      containers:
      - name: influxdb
        imagePullPolicy: Always
        image: influxdb:1.5.3-data-alpine
        volumeMounts:
        - name: data
          mountPath: /var/lib/influxdb
        - name: wal
          mountPath: /var/lib/influxdb-wal
        ports:
        - containerPort: 8088
          name: meta1
        - containerPort: 8089
          name: meta2
        - containerPort: 8091
          name: meta3
        - containerPort: 8086
          name: restapi
        command: ["bash", "-c", "influxd -config /etc/influxdb/influxdb.conf -hostname $(hostname -f)"]
      - name: telegraf
        imagePullPolicy: Always
        image: 455567940957.dkr.ecr.us-west-2.amazonaws.com/telegraf:influxdb-iops
        volumeMounts:
        - name: data
          mountPath: /data
        - name: wal
          mountPath: /wal
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: aws-us-west-2a-gp2
      resources:
        requests:
          storage: 5Ti
  - metadata:
      name: wal
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: aws-us-west-2a-gp2
      resources:
        requests:
          storage: 1Ti
