chronograf-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chronograf
  labels:
    app: chronograf
spec:
  ports:
  - port: 8888
    name: http
  clusterIP: None
  selector:
    app: chronograf
