meta-service.yml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-meta
  labels:
    app: influxdb
    role: meta
spec:
  ports:
  - port: 8088
    name: meta1
  - port: 8089
    name: meta2
  - port: 8091
    name: meta3
  clusterIP: None
  selector:
    app: influxdb
    role: meta
