chronograf-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chronograf
  namespace: mit
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: chronograf.itsecmon.viasat.io
    http:
      paths:
      - path: /
        backend:
          serviceName: chronograf
          servicePort: 8888
