influxdb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: influxdb-enterprise
  namespace: mit
spec:
  rules:
  - host: influxdb-enterprise.itsecmon.viasat.io
    http:
      paths:
      - path: /
        backend:
          serviceName: influxdb-data
          servicePort: 8086
